upd category pages

--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -1,4 +1,4 @@
-<div class="page-nav">
+<div id="nav-panel" class="page-nav" data-role="panel" data-display="push" data-position-fixed="true">
 	<nav class="nav-menu">
 		<ul class="nav-menu__list">
 			<li class="nav-menu__item">
