--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -3,33 +3,34 @@ $icons: map-merge($icons,(actions: (X: 0px, Y:0px, W: 32px, H: 38px, TW: 210px, 
 $icons: map-merge($icons,(actions_box: (X: -65px, Y:-147px, W: 25px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(actions_red: (X: -36px, Y:0px, W: 32px, H: 38px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(all_products: (X: -32px, Y:-147px, W: 29px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_right: (X: -27px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_left: (X: -27px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right: (X: -44px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(btn_up: (X: -123px, Y:-147px, W: 15px, H: 14px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart: (X: -145px, Y:-64px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart_red: (X: -145px, Y:-33px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog: (X: -183px, Y:-157px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog_red: (X: -145px, Y:-95px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery: (X: -104px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart: (X: -145px, Y:-33px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart_red: (X: -145px, Y:-64px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog: (X: -145px, Y:-95px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog_red: (X: -183px, Y:-157px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery: (X: -64px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(delivery_gray: (X: -144px, Y:-114px, W: 32px, H: 20px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery_red: (X: -64px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery_red: (X: -104px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(diagram: (X: -38px, Y:-80px, W: 34px, H: 30px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(diagram_red: (X: 0px, Y:-80px, W: 34px, H: 30px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(exchange: (X: -110px, Y:-40px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(exchange_red: (X: -110px, Y:0px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(home: (X: -76px, Y:-80px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(home_red: (X: -145px, Y:0px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment: (X: -74px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment: (X: -38px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(payment_parts: (X: -94px, Y:-147px, W: 25px, H: 20px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment_red: (X: -38px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment_red: (X: -74px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(phone: (X: -183px, Y:-125px, W: 26px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(search: (X: -114px, Y:-80px, W: 27px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(search_red: (X: -183px, Y:0px, W: 27px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(service: (X: 0px, Y:-42px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(service_gray: (X: 0px, Y:-147px, W: 28px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(service_red: (X: -72px, Y:0px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop: (X: -183px, Y:-32px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_gray: (X: -183px, Y:-94px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_red: (X: -183px, Y:-63px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop: (X: -183px, Y:-63px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_gray: (X: -183px, Y:-32px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_red: (X: -183px, Y:-94px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(user: (X: -32px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(user_red: (X: 0px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
@@ -88,11 +89,16 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	height: 27px
 	background-image: url('../img/icons.png')
 	background-position: -32px -147px
-.icon-arr_right
+.icon-arr_left
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
 	background-position: -27px -179px
+.icon-arr_right
+	width: 13px
+	height: 23px
+	background-image: url('../img/icons.png')
+	background-position: -44px -179px
 .icon-btn_up
 	width: 15px
 	height: 14px
@@ -102,27 +108,27 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -64px
+	background-position: -145px -33px
 .icon-cart_red
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -33px
+	background-position: -145px -64px
 .icon-catalog
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -183px -157px
+	background-position: -145px -95px
 .icon-catalog_red
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -145px -95px
+	background-position: -183px -157px
 .icon-delivery
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: -104px -114px
+	background-position: -64px -114px
 .icon-delivery_gray
 	width: 32px
 	height: 20px
@@ -132,7 +138,7 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: -64px -114px
+	background-position: -104px -114px
 .icon-diagram
 	width: 34px
 	height: 30px
@@ -167,7 +173,7 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -74px -42px
+	background-position: -38px -42px
 .icon-payment_parts
 	width: 25px
 	height: 20px
@@ -177,7 +183,7 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -38px -42px
+	background-position: -74px -42px
 .icon-phone
 	width: 26px
 	height: 28px
@@ -212,17 +218,17 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -32px
+	background-position: -183px -63px
 .icon-shop_gray
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -94px
+	background-position: -183px -32px
 .icon-shop_red
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -63px
+	background-position: -183px -94px
 .icon-user
 	width: 28px
 	height: 29px
