--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-role="footer" >
 	<div class="footer__top border-bold">
 		<div class="footer__contacts contacts">
 			<h3 class="contacts__title">Поддержка клиентов</h3>
