--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<header class="header">
-	<button id="menuBtn" class="menu-btn"><span class="icon-menu"></span></button>
-	<a href="" class="logo">
+<header class="header" data-role="header" data-position="fixed">
+	<a href="#nav-panel" data-iconpos="notext" data-role="button" role="button" class="menu-btn"><span class="icon-menu"></span></a>
+	<a href="" class="logo" data-role="none">
 		<img src="img/logo_sm.svg" alt="" class="logo__img">
 	</a>
 	<button class="cart-btn"><span class="icon-cart"></span></button>
