--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -39,9 +39,8 @@ body
 	
 // common blocks
 
-.out
+.page
 	height: 100%
-	// max-width: 767px	
 	margin-bottom: 0 auto
 	min-width: 320px
 
@@ -61,6 +60,10 @@ h3, .title-h3
 .title-h3
 	&_white
 		color: #fff
+
+img
+	max-width: 100%
+	height: auto
 
 .contacts
 	max-width: 500px
@@ -95,7 +98,6 @@ h3, .title-h3
 	background-color: #f73267
 	background-image: linear-gradient(84deg, red 0%, #ff0054 100%)
 	border-radius: 5px
-	// box-shadow: inset 41.9px -59.8px 76px rgba(0, 0, 0, 0.27)
 	font-size: 25px
 	color: #fff
 	text-align: left
