--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,11 +1,26 @@
 .header
-	position: relative
 	height: 45px
 	line-height: 45px
+	padding: 0 18px 
 	background-color: #0075bf
 	background-image: linear-gradient(to left, #ff0054 0%, red 100%)
+	&__link
+		position: relative
+		display: inline-block
+		top: auto
+		left: auto
+		span
+			vertical-align: middle 
+	&__link-text
+		display: inline-block
+		margin-left: 15px 
+		font-size: 20px
+		color: #FFF 
 
-.logo
+.ui-header .logo
+	position: relative
+	right: auto
+	top: auto 
 	display: block
 	margin: 0 auto
 	width: 130px
@@ -14,7 +29,6 @@
 
 .menu-btn
 	position: absolute
-	// display: block
 	top: 50%
 	left: 15px
 	width: 28px 
