--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -7,7 +7,6 @@
 	height: 100%
 	overflow-x: hidden
 	background-color: #a21b43
-	border: 2px solid white
 	z-index: 1
 
 .page-container
@@ -27,8 +26,6 @@
 		line-height: 34px
 		padding: 0 12px
 		background-color: white
-		border: 1px solid #a5a5a5
-		border-radius: 5px	
 		font-size: 16px
 		color: #000
 		+placeholder
@@ -39,6 +36,7 @@
 		background-color: transparent
 		top: 1px
 		right: 0
+		margin: 0 
 		padding: 5px 12px
 		.icon-search_b
 			font-size: 21px
