--- a/src/sass/components/_categories.sass
+++ b/src/sass/components/_categories.sass
@@ -1,40 +1,52 @@
 .categories
 	&__list
 	&__item
-		padding: 0 15px
-		background-color: #f6f6f6
 		border-bottom: 1px solid #cbcbcb
 		&:first-child
 			border-top: 1px solid #cbcbcb
 	&__content
 
 .category
-	position: relative
-	display: block
-	height: 45px
-	line-height: 45px
+	display: table
+	width: 100% 
+	height: 44px
+	padding: 0 20px
 	text-decoration: none
+	background-color: #f6f6f6
 	span
 		vertical-align: middle
-		
 	&__img
-		display: inline-block
-		vertical-align: middle
-		width: 35px
+		width: 35px 
 		text-align: center
-		margin-right: 5px
+		img
+			max-height: 68px 
+			vertical-align: middle
 	&__title
+		padding: 0 5px
 		color: #787878
 		font-size: 22px
+		line-height: 1.3
 	&__arrow
-		position: absolute
-		top: 50%
-		right: 0
-		transform: translateY(-50%)
+		width: 15px 
+		span
+			vertical-align: middle
+.category_mod
+	background: #FFF 
+	height: 84px 
+	.category__img
+		width: 64px 
+	.category__title
+		padding: 0 5px 0 15px 
+		color: #000
+
+.category__row
+	display: table-row
+.category__cell
+	display: table-cell
+	vertical-align: middle
+	padding: 5px 0 
 
 .products-info
-	margin: 0 -15px
-	&__list
 	&__item
 		border-top: 1px solid #cbcbcb
 		background-color: #fff
