--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,12 +4,14 @@
 @import lib/sprite
 @import lib/svgfont
 @import lib/slick
+@import lib/jquery.mobile
 
 @import components/fonts
 @import common
 @import main
 @import header
 @import footer
+@import jq_mobile
 @import components/icons
 @import components/slider
 @import components/categories
