create registration pages

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -28,6 +28,8 @@
 		background-color: white
 		font-size: 16px
 		color: #000
+		border: 1px solid #cbcbcb
+		border-radius: 5px
 		+placeholder
 			color: #a5a5a5
 			font-size: 13px
