--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -5,9 +5,10 @@ $icons: map-merge($icons,(actions_red: (X: -36px, Y:0px, W: 32px, H: 38px, TW: 2
 $icons: map-merge($icons,(all_products: (X: -32px, Y:-147px, W: 29px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(arr_left: (X: -27px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(arr_right: (X: -44px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right_w: (X: -61px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(btn_up: (X: -123px, Y:-147px, W: 15px, H: 14px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart: (X: -145px, Y:-33px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart_red: (X: -145px, Y:-64px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart: (X: -145px, Y:-64px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart_red: (X: -145px, Y:-33px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(catalog: (X: -145px, Y:-95px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(catalog_red: (X: -183px, Y:-157px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(delivery: (X: -64px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
@@ -17,8 +18,8 @@ $icons: map-merge($icons,(diagram: (X: -38px, Y:-80px, W: 34px, H: 30px, TW: 210
 $icons: map-merge($icons,(diagram_red: (X: 0px, Y:-80px, W: 34px, H: 30px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(exchange: (X: -110px, Y:-40px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(exchange_red: (X: -110px, Y:0px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home: (X: -76px, Y:-80px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home_red: (X: -145px, Y:0px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home: (X: -145px, Y:0px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home_red: (X: -76px, Y:-80px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(payment: (X: -38px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(payment_parts: (X: -94px, Y:-147px, W: 25px, H: 20px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(payment_red: (X: -74px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
@@ -28,11 +29,11 @@ $icons: map-merge($icons,(search_red: (X: -183px, Y:0px, W: 27px, H: 28px, TW: 2
 $icons: map-merge($icons,(service: (X: 0px, Y:-42px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(service_gray: (X: 0px, Y:-147px, W: 28px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(service_red: (X: -72px, Y:0px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop: (X: -183px, Y:-63px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_gray: (X: -183px, Y:-32px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_red: (X: -183px, Y:-94px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user: (X: -32px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user_red: (X: 0px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop: (X: -183px, Y:-32px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_gray: (X: -183px, Y:-94px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_red: (X: -183px, Y:-63px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user: (X: 0px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user_red: (X: -32px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
 
 
@@ -99,6 +100,11 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	height: 23px
 	background-image: url('../img/icons.png')
 	background-position: -44px -179px
+.icon-arr_right_w
+	width: 13px
+	height: 23px
+	background-image: url('../img/icons.png')
+	background-position: -61px -179px
 .icon-btn_up
 	width: 15px
 	height: 14px
@@ -108,12 +114,12 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -33px
+	background-position: -145px -64px
 .icon-cart_red
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -64px
+	background-position: -145px -33px
 .icon-catalog
 	width: 27px
 	height: 12px
@@ -163,12 +169,12 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -76px -80px
+	background-position: -145px 0px
 .icon-home_red
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -145px 0px
+	background-position: -76px -80px
 .icon-payment
 	width: 32px
 	height: 32px
@@ -218,27 +224,27 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -63px
+	background-position: -183px -32px
 .icon-shop_gray
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -32px
+	background-position: -183px -94px
 .icon-shop_red
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -94px
+	background-position: -183px -63px
 .icon-user
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -32px -114px
+	background-position: 0px -114px
 .icon-user_red
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: 0px -114px
+	background-position: -32px -114px
 .icon-warranty
 	width: 23px
 	height: 29px
