--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -49,6 +49,10 @@ h2, .title-h2
 	font-weight: normal
 	color: #000
 	margin-bottom: 10px
+	&_mb_mid
+		margin-bottom: 15px
+	&_dark_gray
+		color: #393939
 
 h3, .title-h3
 	font-size: 20px
@@ -60,6 +64,22 @@ h3, .title-h3
 .title-h3
 	&_white
 		color: #fff
+
+.subtitle
+	margin-bottom: 20px
+	color: #393939
+	font-size: 16px
+	line-height: 1.2
+	
+.subtext
+	display: block 
+	margin-bottom: 5px
+	color: #5b5b5b
+	font-size: 16px
+	line-height: 1.2
+	text-align: center
+	&_red
+		color: #a21b43
 
 img
 	max-width: 100%
