--- a/src/sass/_jq_mobile.sass
+++ b/src/sass/_jq_mobile.sass
@@ -2,15 +2,15 @@
 .ui-panel-inner
 	padding: 0 
 	
-button.ui-btn
-	width: auto 
+// button.ui-btn
+// 	width: auto 
 
 .ui-header .ui-btn
 	font-size: 0
 	margin: 0
 	padding: 0  
 
-.ui-input-text,
-.ui-input-search
-	border: 1px solid #a5a5a5
-	border-radius: 5px	
+// .ui-input-text,
+// .ui-input-search
+// 	border: 1px solid #a5a5a5
+// 	border-radius: 5px	
