--- a/src/sass/lib/_jquery.mobile.sass
+++ b/src/sass/lib/_jquery.mobile.sass
@@ -206,21 +206,21 @@ body.ui-mobile-viewport, div.ui-mobile-viewport
     -webkit-border-bottom-right-radius: inherit
     border-bottom-right-radius: inherit
 
-.ui-btn
-  font-size: 16px
-  margin: .5em 0
-  padding: .7em 1em
-  display: block
-  position: relative
-  text-align: center
-  text-overflow: ellipsis
-  overflow: hidden
-  white-space: nowrap
-  cursor: pointer
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
+// .ui-btn
+//   font-size: 16px
+//   margin: .5em 0
+//   padding: .7em 1em
+//   display: block
+//   position: relative
+//   text-align: center
+//   text-overflow: ellipsis
+//   overflow: hidden
+//   white-space: nowrap
+//   cursor: pointer
+//   -webkit-user-select: none
+//   -moz-user-select: none
+//   -ms-user-select: none
+//   user-select: none
 
 .ui-btn-icon-notext, .ui-header button.ui-btn.ui-btn-icon-notext, .ui-footer button.ui-btn.ui-btn-icon-notext
   padding: 0
@@ -352,13 +352,13 @@ body.ui-mobile-viewport, div.ui-mobile-viewport
     top: .3125em
     right: .3125em
 
-button.ui-btn, .ui-controlgroup-controls button.ui-btn-icon-notext
-  -webkit-box-sizing: border-box
-  -moz-box-sizing: border-box
-  box-sizing: border-box
-  -webkit-appearance: none
-  -moz-appearance: none
-  width: 100%
+// button.ui-btn, .ui-controlgroup-controls button.ui-btn-icon-notext
+//   -webkit-box-sizing: border-box
+//   -moz-box-sizing: border-box
+//   box-sizing: border-box
+//   -webkit-appearance: none
+//   -moz-appearance: none
+//   width: 100%
 
 button.ui-btn-inline, .ui-header button.ui-btn, .ui-footer button.ui-btn
   width: auto
@@ -2744,33 +2744,33 @@ div.ui-rangeslider label
     margin-top: 0
     margin-bottom: 0
 
-.ui-input-text, .ui-input-search
-  margin: .5em 0
-  border-width: 1px
-  border-style: solid
+// .ui-input-text, .ui-input-search
+//   margin: .5em 0
+//   border-width: 1px
+//   border-style: solid
 
 .ui-mini
   margin: .446em
 
-.ui-input-text input, .ui-input-search input, textarea.ui-input-text
-  padding: .4em
-  line-height: 1.4em
-  display: block
-  width: 100%
-  -webkit-box-sizing: border-box
-  -moz-box-sizing: border-box
-  box-sizing: border-box
-  outline: 0
+// .ui-input-text input, .ui-input-search input, textarea.ui-input-text
+//   padding: .4em
+//   line-height: 1.4em
+//   display: block
+//   width: 100%
+//   -webkit-box-sizing: border-box
+//   -moz-box-sizing: border-box
+//   box-sizing: border-box
+//   outline: 0
 
-.ui-input-text input, .ui-input-search input
-  margin: 0
-  min-height: 2.2em
-  text-align: left
-  border: 0
-  background: transparent none
-  -webkit-appearance: none
-  -webkit-border-radius: inherit
-  border-radius: inherit
+// .ui-input-text input, .ui-input-search input
+//   margin: 0
+//   min-height: 2.2em
+//   text-align: left
+//   border: 0
+//   background: transparent none
+//   -webkit-appearance: none
+//   -webkit-border-radius: inherit
+//   border-radius: inherit
 
 textarea.ui-input-text
   overflow: auto
@@ -2780,8 +2780,8 @@ textarea.ui-input-text
   .ui-input-text input, .ui-input-search input
     font-size: 14px
 
-.ui-input-text.ui-mini input, .ui-input-search.ui-mini input, .ui-mini textarea.ui-input-text, textarea.ui-mini
-  font-size: 14px
+// .ui-input-text.ui-mini input, .ui-input-search.ui-mini input, .ui-mini textarea.ui-input-text, textarea.ui-mini
+//   font-size: 14px
 
 .ui-mini textarea.ui-input-text, textarea.ui-mini
   margin: .446em 0
