--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
-<footer class="footer" data-role="footer" >
+<!-- BEGIN footer-->
+<footer class="footer">
 	<div class="footer__top border-bold">
 		<div class="footer__contacts contacts">
 			<h3 class="contacts__title">Поддержка клиентов</h3>
@@ -12,3 +13,4 @@
 		<div class="copyright">© Интернет-магазин Смартс 2017</div>
 	</div>
 </footer>
+<!-- BEGIN footer-->
