--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -7,12 +7,21 @@
 	height: 100%
 	overflow-x: hidden
 	background-color: #a21b43
-	z-index: 1
+	z-index: 3
+	transform: translate3D(-272px, 0, 0)
+	transition: transform 0.6s cubic-bezier(0.445, 0.05, 0.55, 0.95)
+	.is-push &
+		transform: translate3D(0, 0, 0)
 
-.page-container
+.page
 	position: relative
 	background-color: #fff
 	z-index: 2
+	transform: translate3D(0, 0, 0)
+	transition: transform 0.6s cubic-bezier(0.445, 0.05, 0.55, 0.95)
+	.is-push &
+		transform: translate3D(272px, 0, 0)
+		overflow: hidden
 
 .search
 	padding: 5px 10px
