create registration pages

--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -3,3 +3,26 @@
 		text-align: center
 	&__bottom
 		padding: 10px 15px 20px
+
+.contacts
+	max-width: 500px
+	margin: 0 auto
+	padding: 15px 20px
+	text-align: center
+	&_white
+		.contacts__title
+			color: #fff
+		.contacts__phone
+			background: none
+		.contacts__schedule
+			p
+				color: #fff
+	
+.schedule
+	p
+		color: #585858
+		font-size: 16px
+
+.copyright
+	color: #585858
+	font-size: 12px
