--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,40 +1,45 @@
 $icons: (0:0)
-$icons: map-merge($icons,(actions: (X: 0px, Y:0px, W: 32px, H: 38px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(actions_box: (X: -65px, Y:-147px, W: 25px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(actions_red: (X: -36px, Y:0px, W: 32px, H: 38px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(all_products: (X: -32px, Y:-147px, W: 29px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_left: (X: -27px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_right: (X: -44px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_right_w: (X: -61px, Y:-179px, W: 13px, H: 23px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(btn_up: (X: -123px, Y:-147px, W: 15px, H: 14px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart: (X: -145px, Y:-64px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart_red: (X: -145px, Y:-33px, W: 32px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog: (X: -145px, Y:-95px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog_red: (X: -183px, Y:-157px, W: 27px, H: 12px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery: (X: -64px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery_gray: (X: -144px, Y:-114px, W: 32px, H: 20px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery_red: (X: -104px, Y:-114px, W: 36px, H: 22px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(diagram: (X: -38px, Y:-80px, W: 34px, H: 30px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(diagram_red: (X: 0px, Y:-80px, W: 34px, H: 30px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(exchange: (X: -110px, Y:-40px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(exchange_red: (X: -110px, Y:0px, W: 31px, H: 36px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home: (X: -145px, Y:0px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home_red: (X: -76px, Y:-80px, W: 34px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment: (X: -38px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment_parts: (X: -94px, Y:-147px, W: 25px, H: 20px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment_red: (X: -74px, Y:-42px, W: 32px, H: 32px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(phone: (X: -183px, Y:-125px, W: 26px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(search: (X: -114px, Y:-80px, W: 27px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(search_red: (X: -183px, Y:0px, W: 27px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service: (X: 0px, Y:-42px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service_gray: (X: 0px, Y:-147px, W: 28px, H: 28px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service_red: (X: -72px, Y:0px, W: 34px, H: 34px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop: (X: -183px, Y:-32px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_gray: (X: -183px, Y:-94px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_red: (X: -183px, Y:-63px, W: 27px, H: 27px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user: (X: 0px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user_red: (X: -32px, Y:-114px, W: 28px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210px, TH: 208px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions: (X: -145px, Y:-100px, W: 32px, H: 38px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions_box: (X: -272px, Y:-220px, W: 25px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions_red: (X: -181px, Y:-100px, W: 32px, H: 38px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(all_products: (X: -272px, Y:0px, W: 29px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_left: (X: -240px, Y:-187px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right: (X: -217px, Y:-100px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right_w: (X: -218px, Y:-186px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(btn_up: (X: -116px, Y:-226px, W: 15px, H: 14px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart: (X: -182px, Y:-186px, W: 32px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart_red: (X: -146px, Y:-186px, W: 32px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog: (X: -240px, Y:-171px, W: 27px, H: 12px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog_red: (X: -240px, Y:-155px, W: 27px, H: 12px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery: (X: -40px, Y:-226px, W: 36px, H: 22px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery_gray: (X: -80px, Y:-226px, W: 32px, H: 20px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery_red: (X: 0px, Y:-226px, W: 36px, H: 22px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(diagram: (X: -148px, Y:-148px, W: 34px, H: 30px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(diagram_red: (X: -186px, Y:-148px, W: 34px, H: 30px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(exchange: (X: -35px, Y:-186px, W: 31px, H: 36px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(exchange_red: (X: 0px, Y:-186px, W: 31px, H: 36px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(fb: (X: -97px, Y:-100px, W: 44px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home: (X: -108px, Y:-186px, W: 34px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home_red: (X: -70px, Y:-186px, W: 34px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(instagram: (X: -49px, Y:-100px, W: 44px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment: (X: -112px, Y:-148px, W: 32px, H: 32px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment_parts: (X: -240px, Y:-131px, W: 25px, H: 20px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment_red: (X: -76px, Y:-148px, W: 32px, H: 32px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(phone: (X: -272px, Y:-188px, W: 26px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(search: (X: -272px, Y:-31px, W: 27px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(search_red: (X: -272px, Y:-63px, W: 27px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service: (X: -38px, Y:-148px, W: 34px, H: 34px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_gray: (X: -240px, Y:-66px, W: 28px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_red: (X: 0px, Y:-148px, W: 34px, H: 34px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop: (X: -272px, Y:-126px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_gray: (X: -272px, Y:-95px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_red: (X: -272px, Y:-157px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(smile: (X: -140px, Y:0px, W: 96px, H: 96px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(success: (X: 0px, Y:0px, W: 136px, H: 96px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user: (X: -240px, Y:0px, W: 28px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user_red: (X: -240px, Y:-33px, W: 28px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(warranty: (X: -240px, Y:-98px, W: 23px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -74,179 +79,204 @@ $icons: map-merge($icons,(warranty: (X: 0px, Y:-179px, W: 23px, H: 29px, TW: 210
 	width: 32px
 	height: 38px
 	background-image: url('../img/icons.png')
-	background-position: 0px 0px
+	background-position: -145px -100px
 .icon-actions_box
 	width: 25px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -65px -147px
+	background-position: -272px -220px
 .icon-actions_red
 	width: 32px
 	height: 38px
 	background-image: url('../img/icons.png')
-	background-position: -36px 0px
+	background-position: -181px -100px
 .icon-all_products
 	width: 29px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -32px -147px
+	background-position: -272px 0px
 .icon-arr_left
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -27px -179px
+	background-position: -240px -187px
 .icon-arr_right
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -44px -179px
+	background-position: -217px -100px
 .icon-arr_right_w
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -61px -179px
+	background-position: -218px -186px
 .icon-btn_up
 	width: 15px
 	height: 14px
 	background-image: url('../img/icons.png')
-	background-position: -123px -147px
+	background-position: -116px -226px
 .icon-cart
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -64px
+	background-position: -182px -186px
 .icon-cart_red
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -145px -33px
+	background-position: -146px -186px
 .icon-catalog
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -145px -95px
+	background-position: -240px -171px
 .icon-catalog_red
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -183px -157px
+	background-position: -240px -155px
 .icon-delivery
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: -64px -114px
+	background-position: -40px -226px
 .icon-delivery_gray
 	width: 32px
 	height: 20px
 	background-image: url('../img/icons.png')
-	background-position: -144px -114px
+	background-position: -80px -226px
 .icon-delivery_red
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: -104px -114px
+	background-position: 0px -226px
 .icon-diagram
 	width: 34px
 	height: 30px
 	background-image: url('../img/icons.png')
-	background-position: -38px -80px
+	background-position: -148px -148px
 .icon-diagram_red
 	width: 34px
 	height: 30px
 	background-image: url('../img/icons.png')
-	background-position: 0px -80px
+	background-position: -186px -148px
 .icon-exchange
 	width: 31px
 	height: 36px
 	background-image: url('../img/icons.png')
-	background-position: -110px -40px
+	background-position: -35px -186px
 .icon-exchange_red
 	width: 31px
 	height: 36px
 	background-image: url('../img/icons.png')
-	background-position: -110px 0px
+	background-position: 0px -186px
+.icon-fb
+	width: 44px
+	height: 44px
+	background-image: url('../img/icons.png')
+	background-position: -97px -100px
 .icon-home
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -145px 0px
+	background-position: -108px -186px
 .icon-home_red
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -76px -80px
+	background-position: -70px -186px
+.icon-instagram
+	width: 44px
+	height: 44px
+	background-image: url('../img/icons.png')
+	background-position: -49px -100px
 .icon-payment
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -38px -42px
+	background-position: -112px -148px
 .icon-payment_parts
 	width: 25px
 	height: 20px
 	background-image: url('../img/icons.png')
-	background-position: -94px -147px
+	background-position: -240px -131px
 .icon-payment_red
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -74px -42px
+	background-position: -76px -148px
 .icon-phone
 	width: 26px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -183px -125px
+	background-position: -272px -188px
 .icon-search
 	width: 27px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -114px -80px
+	background-position: -272px -31px
 .icon-search_red
 	width: 27px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -183px 0px
+	background-position: -272px -63px
 .icon-service
 	width: 34px
 	height: 34px
 	background-image: url('../img/icons.png')
-	background-position: 0px -42px
+	background-position: -38px -148px
 .icon-service_gray
 	width: 28px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: 0px -147px
+	background-position: -240px -66px
 .icon-service_red
 	width: 34px
 	height: 34px
 	background-image: url('../img/icons.png')
-	background-position: -72px 0px
+	background-position: 0px -148px
 .icon-shop
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -32px
+	background-position: -272px -126px
 .icon-shop_gray
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -94px
+	background-position: -272px -95px
 .icon-shop_red
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -183px -63px
+	background-position: -272px -157px
+.icon-smile
+	width: 96px
+	height: 96px
+	background-image: url('../img/icons.png')
+	background-position: -140px 0px
+.icon-success
+	width: 136px
+	height: 96px
+	background-image: url('../img/icons.png')
+	background-position: 0px 0px
 .icon-user
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: 0px -114px
+	background-position: -240px 0px
 .icon-user_red
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -32px -114px
+	background-position: -240px -33px
 .icon-warranty
 	width: 23px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: 0px -179px
+	background-position: -240px -98px
+.icon-ytb
+	width: 45px
+	height: 44px
+	background-image: url('../img/icons.png')
+	background-position: 0px -100px
