--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,3 +15,5 @@
 @import components/categories
 @import components/nav-menu
 @import components/registration
+@import components/orders
+@import components/hints
