--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -35,7 +35,7 @@ html, body
 body
 	+reg 
 	font-size: 14px
-	line-height: 1.4
+	line-height: 1.3
 	
 // common blocks
 
@@ -65,11 +65,25 @@ h3, .title-h3
 	&_white
 		color: #fff
 
+.page-title 
+	margin: 20px 0
+	text-align: center
+	line-height: 1.6
+
+
 .subtitle
 	margin-bottom: 20px
 	color: #393939
 	font-size: 16px
 	line-height: 1.2
+	&_small
+		font-size: 14px
+		line-height: 1.4
+		color: #000
+	&_mb_lg
+		margin-bottom: 25px
+	&_bold
+		font-weight: bold
 	
 .subtext
 	display: block 
@@ -84,27 +98,6 @@ h3, .title-h3
 img
 	max-width: 100%
 	height: auto
-
-.contacts
-	max-width: 500px
-	margin: 0 auto
-	padding: 15px 20px
-	text-align: center
-	&_white
-		.contacts__title
-			color: #fff
-		.contacts__phone
-			background: none
-		.contacts__schedule
-			color: #fff
-	
-.shedule
-	color: #585858
-	font-size: 16px
-
-.copyright
-	color: #585858
-	font-size: 12px
 
 .phone-btn
 	position: relative
@@ -126,3 +119,16 @@ img
 		top: 50%
 		left: 20px
 		transform: translateY(-50%)
+
+.btn-primary
+	display: block
+	width: 270px
+	max-width: 400px
+	height: 45px
+	line-height: 45px
+	margin: 0 auto
+	padding: 0 5px
+	background-color: #a21b43
+	font-size: 22px 
+	border-radius: 2px
+	color: #fff	
