added service-center page

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -53,6 +53,8 @@ h2, .title-h2
 		margin-bottom: 15px
 	&_dark_gray
 		color: #393939
+	&_grey
+		color: #787878
 
 h3, .title-h3
 	font-size: 20px
@@ -131,4 +133,14 @@ img
 	background-color: #a21b43
 	font-size: 22px 
 	border-radius: 2px
-	color: #fff	
+	color: #fff
+
+.btn-default
+	display: inline-block
+	padding-left: 15px
+	padding-right: 15px
+	height: 45px
+	background: #a21b43
+	color: #fff
+	font-size: 18px
+	text-align: center
