--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,45 +1,50 @@
 $icons: (0:0)
-$icons: map-merge($icons,(actions: (X: -145px, Y:-100px, W: 32px, H: 38px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(actions_box: (X: -272px, Y:-220px, W: 25px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(actions_red: (X: -181px, Y:-100px, W: 32px, H: 38px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(all_products: (X: -272px, Y:0px, W: 29px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_left: (X: -240px, Y:-187px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_right: (X: -217px, Y:-100px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(arr_right_w: (X: -218px, Y:-186px, W: 13px, H: 23px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(btn_up: (X: -116px, Y:-226px, W: 15px, H: 14px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart: (X: -182px, Y:-186px, W: 32px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(cart_red: (X: -146px, Y:-186px, W: 32px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog: (X: -240px, Y:-171px, W: 27px, H: 12px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(catalog_red: (X: -240px, Y:-155px, W: 27px, H: 12px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery: (X: -40px, Y:-226px, W: 36px, H: 22px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery_gray: (X: -80px, Y:-226px, W: 32px, H: 20px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(delivery_red: (X: 0px, Y:-226px, W: 36px, H: 22px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(diagram: (X: -148px, Y:-148px, W: 34px, H: 30px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(diagram_red: (X: -186px, Y:-148px, W: 34px, H: 30px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(exchange: (X: -35px, Y:-186px, W: 31px, H: 36px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(exchange_red: (X: 0px, Y:-186px, W: 31px, H: 36px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(fb: (X: -97px, Y:-100px, W: 44px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home: (X: -108px, Y:-186px, W: 34px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(home_red: (X: -70px, Y:-186px, W: 34px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(instagram: (X: -49px, Y:-100px, W: 44px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment: (X: -112px, Y:-148px, W: 32px, H: 32px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment_parts: (X: -240px, Y:-131px, W: 25px, H: 20px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(payment_red: (X: -76px, Y:-148px, W: 32px, H: 32px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(phone: (X: -272px, Y:-188px, W: 26px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(search: (X: -272px, Y:-31px, W: 27px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(search_red: (X: -272px, Y:-63px, W: 27px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service: (X: -38px, Y:-148px, W: 34px, H: 34px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service_gray: (X: -240px, Y:-66px, W: 28px, H: 28px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(service_red: (X: 0px, Y:-148px, W: 34px, H: 34px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop: (X: -272px, Y:-126px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_gray: (X: -272px, Y:-95px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(shop_red: (X: -272px, Y:-157px, W: 27px, H: 27px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(smile: (X: -140px, Y:0px, W: 96px, H: 96px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(success: (X: 0px, Y:0px, W: 136px, H: 96px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user: (X: -240px, Y:0px, W: 28px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(user_red: (X: -240px, Y:-33px, W: 28px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(warranty: (X: -240px, Y:-98px, W: 23px, H: 29px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 301px, TH: 248px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions: (X: -190px, Y:-100px, W: 32px, H: 38px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions_box: (X: -240px, Y:-114px, W: 25px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(actions_red: (X: 0px, Y:-148px, W: 32px, H: 38px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(all_products: (X: 0px, Y:-265px, W: 29px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_left: (X: -222px, Y:-148px, W: 13px, H: 23px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right: (X: -220px, Y:-190px, W: 13px, H: 23px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arr_right_w: (X: -240px, Y:-202px, W: 13px, H: 23px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(btn_up: (X: -67px, Y:-265px, W: 15px, H: 14px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart: (X: -33px, Y:-230px, W: 32px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(cart_red: (X: -184px, Y:-190px, W: 32px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog: (X: -216px, Y:-230px, W: 27px, H: 12px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(catalog_red: (X: -185px, Y:-230px, W: 27px, H: 12px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery: (X: -69px, Y:-230px, W: 36px, H: 22px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery_gray: (X: -149px, Y:-230px, W: 32px, H: 20px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(delivery_red: (X: -109px, Y:-230px, W: 36px, H: 22px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(diagram: (X: -70px, Y:-190px, W: 34px, H: 30px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(diagram_red: (X: -184px, Y:-148px, W: 34px, H: 30px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(exchange: (X: -35px, Y:-190px, W: 31px, H: 36px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(exchange_red: (X: 0px, Y:-190px, W: 31px, H: 36px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(fb: (X: -97px, Y:-100px, W: 44px, H: 44px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(geo_location: (X: -240px, Y:-42px, W: 24px, H: 36px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home: (X: -108px, Y:-190px, W: 34px, H: 29px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home_red: (X: -146px, Y:-190px, W: 34px, H: 29px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(instagram: (X: -49px, Y:-100px, W: 44px, H: 44px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment: (X: -148px, Y:-148px, W: 32px, H: 32px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment_parts: (X: -240px, Y:-178px, W: 25px, H: 20px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(payment_red: (X: -112px, Y:-148px, W: 32px, H: 32px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(phone: (X: -240px, Y:-82px, W: 26px, H: 28px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(search: (X: -270px, Y:-98px, W: 27px, H: 28px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(search_red: (X: -270px, Y:-130px, W: 27px, H: 28px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service: (X: -36px, Y:-148px, W: 34px, H: 34px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_gray: (X: -270px, Y:-66px, W: 28px, H: 28px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_item_credit: (X: -145px, Y:-100px, W: 41px, H: 41px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_item_diagnostic: (X: -33px, Y:-265px, W: 30px, H: 26px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_item_geo: (X: -240px, Y:0px, W: 26px, H: 38px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_item_time: (X: 0px, Y:-230px, W: 29px, H: 31px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(service_red: (X: -74px, Y:-148px, W: 34px, H: 34px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop: (X: -270px, Y:-224px, W: 27px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_gray: (X: -270px, Y:-162px, W: 27px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(shop_red: (X: -270px, Y:-193px, W: 27px, H: 27px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(smile: (X: -140px, Y:0px, W: 96px, H: 96px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(success: (X: 0px, Y:0px, W: 136px, H: 96px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user: (X: -270px, Y:0px, W: 28px, H: 29px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(user_red: (X: -270px, Y:-33px, W: 28px, H: 29px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(warranty: (X: -240px, Y:-145px, W: 23px, H: 29px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 298px, TH: 292px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -79,112 +84,117 @@ $icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 301px, T
 	width: 32px
 	height: 38px
 	background-image: url('../img/icons.png')
-	background-position: -145px -100px
+	background-position: -190px -100px
 .icon-actions_box
 	width: 25px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -272px -220px
+	background-position: -240px -114px
 .icon-actions_red
 	width: 32px
 	height: 38px
 	background-image: url('../img/icons.png')
-	background-position: -181px -100px
+	background-position: 0px -148px
 .icon-all_products
 	width: 29px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -272px 0px
+	background-position: 0px -265px
 .icon-arr_left
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -240px -187px
+	background-position: -222px -148px
 .icon-arr_right
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -217px -100px
+	background-position: -220px -190px
 .icon-arr_right_w
 	width: 13px
 	height: 23px
 	background-image: url('../img/icons.png')
-	background-position: -218px -186px
+	background-position: -240px -202px
 .icon-btn_up
 	width: 15px
 	height: 14px
 	background-image: url('../img/icons.png')
-	background-position: -116px -226px
+	background-position: -67px -265px
 .icon-cart
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -182px -186px
+	background-position: -33px -230px
 .icon-cart_red
 	width: 32px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -146px -186px
+	background-position: -184px -190px
 .icon-catalog
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -240px -171px
+	background-position: -216px -230px
 .icon-catalog_red
 	width: 27px
 	height: 12px
 	background-image: url('../img/icons.png')
-	background-position: -240px -155px
+	background-position: -185px -230px
 .icon-delivery
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: -40px -226px
+	background-position: -69px -230px
 .icon-delivery_gray
 	width: 32px
 	height: 20px
 	background-image: url('../img/icons.png')
-	background-position: -80px -226px
+	background-position: -149px -230px
 .icon-delivery_red
 	width: 36px
 	height: 22px
 	background-image: url('../img/icons.png')
-	background-position: 0px -226px
+	background-position: -109px -230px
 .icon-diagram
 	width: 34px
 	height: 30px
 	background-image: url('../img/icons.png')
-	background-position: -148px -148px
+	background-position: -70px -190px
 .icon-diagram_red
 	width: 34px
 	height: 30px
 	background-image: url('../img/icons.png')
-	background-position: -186px -148px
+	background-position: -184px -148px
 .icon-exchange
 	width: 31px
 	height: 36px
 	background-image: url('../img/icons.png')
-	background-position: -35px -186px
+	background-position: -35px -190px
 .icon-exchange_red
 	width: 31px
 	height: 36px
 	background-image: url('../img/icons.png')
-	background-position: 0px -186px
+	background-position: 0px -190px
 .icon-fb
 	width: 44px
 	height: 44px
 	background-image: url('../img/icons.png')
 	background-position: -97px -100px
+.icon-geo_location
+	width: 24px
+	height: 36px
+	background-image: url('../img/icons.png')
+	background-position: -240px -42px
 .icon-home
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -108px -186px
+	background-position: -108px -190px
 .icon-home_red
 	width: 34px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -70px -186px
+	background-position: -146px -190px
 .icon-instagram
 	width: 44px
 	height: 44px
@@ -194,62 +204,82 @@ $icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 301px, T
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -112px -148px
+	background-position: -148px -148px
 .icon-payment_parts
 	width: 25px
 	height: 20px
 	background-image: url('../img/icons.png')
-	background-position: -240px -131px
+	background-position: -240px -178px
 .icon-payment_red
 	width: 32px
 	height: 32px
 	background-image: url('../img/icons.png')
-	background-position: -76px -148px
+	background-position: -112px -148px
 .icon-phone
 	width: 26px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -272px -188px
+	background-position: -240px -82px
 .icon-search
 	width: 27px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -272px -31px
+	background-position: -270px -98px
 .icon-search_red
 	width: 27px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -272px -63px
+	background-position: -270px -130px
 .icon-service
 	width: 34px
 	height: 34px
 	background-image: url('../img/icons.png')
-	background-position: -38px -148px
+	background-position: -36px -148px
 .icon-service_gray
 	width: 28px
 	height: 28px
 	background-image: url('../img/icons.png')
-	background-position: -240px -66px
+	background-position: -270px -66px
+.icon-service_item_credit
+	width: 41px
+	height: 41px
+	background-image: url('../img/icons.png')
+	background-position: -145px -100px
+.icon-service_item_diagnostic
+	width: 30px
+	height: 26px
+	background-image: url('../img/icons.png')
+	background-position: -33px -265px
+.icon-service_item_geo
+	width: 26px
+	height: 38px
+	background-image: url('../img/icons.png')
+	background-position: -240px 0px
+.icon-service_item_time
+	width: 29px
+	height: 31px
+	background-image: url('../img/icons.png')
+	background-position: 0px -230px
 .icon-service_red
 	width: 34px
 	height: 34px
 	background-image: url('../img/icons.png')
-	background-position: 0px -148px
+	background-position: -74px -148px
 .icon-shop
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -272px -126px
+	background-position: -270px -224px
 .icon-shop_gray
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -272px -95px
+	background-position: -270px -162px
 .icon-shop_red
 	width: 27px
 	height: 27px
 	background-image: url('../img/icons.png')
-	background-position: -272px -157px
+	background-position: -270px -193px
 .icon-smile
 	width: 96px
 	height: 96px
@@ -264,17 +294,17 @@ $icons: map-merge($icons,(ytb: (X: 0px, Y:-100px, W: 45px, H: 44px, TW: 301px, T
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -240px 0px
+	background-position: -270px 0px
 .icon-user_red
 	width: 28px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -240px -33px
+	background-position: -270px -33px
 .icon-warranty
 	width: 23px
 	height: 29px
 	background-image: url('../img/icons.png')
-	background-position: -240px -98px
+	background-position: -240px -145px
 .icon-ytb
 	width: 45px
 	height: 44px
