--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,5 +15,6 @@
 @import components/categories
 @import components/nav-menu
 @import components/registration
+@import components/service-center
 @import components/orders
 @import components/hints
