added warranty page

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,5 +16,7 @@
 @import components/nav-menu
 @import components/registration
 @import components/service-center
+@import components/static-page
+@import components/warranty
 @import components/orders
 @import components/hints
