--- a/src/sass/components/_static-page.sass
+++ b/src/sass/components/_static-page.sass
@@ -5,7 +5,12 @@
 	padding-top: 10px
 	font-size: 16px
 	.banner
-		margin: -10px -10px 10px
+		margin: 0 -10px 10px
+		&_top
+			margin-top: -10px
+		img
+			width: 100%
+			height: auto
 
 	p
 		margin: 15px 0
