--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,5 +18,6 @@
 @import components/service-center
 @import components/static-page
 @import components/warranty
+@import components/stores
 @import components/orders
 @import components/hints
