added page actions and pagination component

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -19,5 +19,7 @@
 @import components/static-page
 @import components/warranty
 @import components/stores
+@import components/actions
+@import components/pagination
 @import components/orders
 @import components/hints
