--- a/src/sass/components/_actions.sass
+++ b/src/sass/components/_actions.sass
@@ -46,6 +46,40 @@
 		line-height: 45px
 
 
+.action-details
+	margin-bottom: 30px
+	&__footer
+		margin-top: 25px
+		& .time
+			color: #8d8d8d
+			margin-bottom: 10px
+		& .counter
+			display: block
+			width: 100%
+			height: 45px
+			line-height: 45px
+			margin-bottom: 20px
+			background: #fff
+			border: 1px solid #a21b43
+			color: #a21b43
+			text-align: center
+			font-size: 18px
+			span
+				line-height: 1
+
+		& .btn-backward
+			position: relative
+			padding-left: 45px
+			padding-right: 25px
+			font-size: 22px
+			line-height: 45px
+			& [class^="icon-"]
+				position: absolute
+				top: 50%
+				left: 20px
+				transform: translate(0, -50%)
+
+
 
 
 
